# EfficientWord-Net

./: .gitignore  CITATION.bib  LICENSE.md  MANIFEST.in  ModelToEngine.ipynb  README.md  baseModel.tflite  baseModel2.tflite  generate_reference.py  ibm_generate.py  pyproject.toml  requirements.txt  setup.py  single_word_test.py  stftTests.py.ipynb  stftTests_py.ipynb  test.py  test_inference.py  tflite.ipynb  training.ipynb
docs/: audio_processing.html  engine.html  generate_reference.html  ibm_generate.html  index.html  package_installation_scripts.html  streams.html
docs/efficientword/: engine.html  generate_reference.html
eff_word_net/: __init__.py  audio_processing.py  audio_utils.py  create_recordings.py  engine.py  generate_reference.py  ibm_generate.py  logmelcalc.tflite  package_installation_scripts.py  single_word_test.py  streams.py
eff_word_net/sample_refs/: alexa_ref.json  balloon_ref.json  computer_ref.json  firefox_ref.json  lights_off_ref.json  lights_on_ref.json  mobile_ref.json  mycroft_ref.json
efficientword/: __init__.py  engine.py  generate_reference.py  google_ref.json  ibm_generate.py  requirements.txt  streams.py
efficientword/sample_refs/: mobile_ref.json  siri_ref.json
html/efficientword/: ibm_generate.html  index.html
wakewords/: mobile_ref.json
wakewords/alexa/: alexa.ref  alexa_ref.json  alexa_ref.ref
