[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EfficientWord-Net"
version = "1.0.5"
description = "Few Shot Learning based Hotword Detection Engine"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { file = "LICENSE.md" }
dependencies = [
    "numpy",
    "onnxruntime",
    "pyaudio",
    "requests",
    "soundfile>=0.13.1",
    "twine>=6.2.0",
    "typer>=0.21.0",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/Ant-Brain/EfficientWord"

[tool.setuptools]
include-package-data = true
packages = ["eff_word_net"]
